# chessvalidator

./: Makefile  README.md  dune-project  test_data.txt
lib/: chess.ml  dune
test/: chess_test.ml  dune
